changed the about the game card covers to fade out/in when hovered over instead of sliding up/down. Solves both the cover still being on the page bug and cover sliding down to far and creating white space at the bottom.

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,6 @@ padding-right: 3%;
 
 .home-header {
   height: 100vh;
-  /* background-image: linear-gradient(90deg, #00072D, 10vw, black, black); */
   position: absolute;
 }
 
@@ -460,6 +459,7 @@ padding-right: 3%;
   color: var(--neon-yellow);
   height: 5vh;
   font-size: 1.3rem;
+  padding: 0 1.5%;
 }
 
 .login-input:focus {
